# ai

./: .env  .gitignore  Layout info:  TODO  __init__.py  autocomplete.bashrc  chat.py  chat_command_interceptor.py  clear_pycache.sh  cli_args.py  color.py  command_executor.py  command_interceptor.py  commit.md  config.json  config.py  dependency_installer.py  direct.py  events.py  functions.py  init.py  listen.py  llm.html  llm.py  main.py  model_config_manager.py  program.py  pyproject.toml  readme.md  requirements.txt  requirements_linux.txt  run  run.cmd  run.sh  setup.py  test.py  tools  tools.py  update_config.py
.github/workflows/: codeql.yml
core/: __init__.py  chat.py  chat_command_interceptor.py  command_executor.py  context_file.py  listen.py  llm.py  template_injection.py  tools.py
core/db/: db-base.py
core/llms/: __init__.py  base_llm.py  file_content_handler.py  gguf_model.py  huggingface_model.py  llm.py  ollama.py  ollama_model.py  output_printer.py  t5_model.py  think_parser.py  thinking_log_manager.py
core/tasks/: __init__.py  context_file.py  task.py  task_pass.py  task_program.py
entities/: __init__.py  model_enums.py
examples/tasks/: task.json
extras/: __init__.py  console.py  file_content_handler.py  handler_manager.py  output_printer.py  think_parser.py  thinking_log_manager.py  yt.py
prompt_templates/: simple_prompt.md  tn.md  tool_selector.md  tugapse.md
prompt_templates/task/: analyze_code.md  code_comment.md  code_comment_v2.md  comment_code_php.md  create_github_md.md  create_github_md_3x.md
scripts/: autocomplete.bashrc  autocomplete.ps1
services/: model_manager.py
src/ai/: cli_args.py  config.json  config.py  direct.py  functions.py  main.py  model_config_manager.py  program.py
src/ai/core/: chat.py  (+3 more)
templates/: tn.md
templates/inject/: thinking.md
templates/model-config/: gemma3  qwen3  qwen3-gguf.json  qwen3-hf.json
templates/system/: ai-assistant.md  ai_assistant.md  code_expert.md  commit.md  default.md  extract_wisdom.md  file-manager.md  git-expert.md  json.md  simple_prompt.md  task.md  unit-test.md
templates/task/: code_comment.md  code_comment_v2.md  comment_code_php.md  commit.md  create_github_md_3x.md  test-angular.md
testes/: create_github_init01.md  task_analyze_init01.md
tests/: test_functions.py
tests/core/: test_chat.py
(+32 files in other folders)
