[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai"
version = "2.1.1"
authors = [
  { name="Fabio Almeida", email="tugapse@gmail.com" },
]
description = "Ai assistant ClI"
readme = "README.md"

requires-python = ">=3.8, <3.13"

dependencies = [
    "accelerate",
    "bitsandbytes",
    "colorama",
    "dotenv",
    "huggingface-hub",
    "llama_cpp_python",
    "numpy",
    "ollama",
    "tqdm",
    "transformers",
    'pyreadline3; sys_platform == "win32"',
    'triton-windows; sys_platform == "win32"',
    'triton; sys_platform != "win32"'
]

[project.scripts]
ai = "ai.main:run"

[project.urls]
"Homepage" = "https://github.com/tugapse/ai.git"
"Bug Tracker" = "https://github.com/tugapse/ai.git/issues"